# Synapse

./: .gitignore  drl.sln
.clinerules/: financial-drl-model.md
api/: README.md  requirements.txt
api/src/: __init__.py  main.py  test_api.py
bot/: CHECKPOINT_FIX_SUMMARY.md  README.md  analyze_generalization.py  analyze_overfitting.py  cleanup_checkpoints.py  export_synapse_to_onnx.bat  fix_position_holding.py  implement_overfitting_fixes.py  test_checkpoint_fix.py
bot/data/: XAUUSDm_15min.csv  XAUUSDm_60min.csv
bot/docs/: ANTI_OVERFITTING_IMPLEMENTATION_GUIDE.md  ANTI_OVERFITTING_TECHNICAL_SUMMARY.md  DOCUMENTATION_ENHANCEMENT_SUMMARY.md  ENHANCED_EARLY_STOPPING_FIX_REPORT.md  ENHANCED_SCORING_SOLUTION.md  FAST_EVALUATION_GUIDE.md  GPU_DEADLOCK_FIX_REPORT.md  LOOK_AHEAD_BIAS_FIX_REPORT.md  NO_EARLY_STOPPING_SOLUTION.md  OVERFITTING_FIX_IMPLEMENTATION_REPORT.md  PERFORMANCE_IMPROVEMENT_ROADMAP.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION_GUIDE.md  PROJECT_STATUS_SUMMARY.md  QUICK_REFERENCE_GUIDE.md  REWARD_SYSTEM_OVERHAUL_REPORT.md  TRAINING_OPTIMIZATION_GUIDE.md  TRAINING_SPEED_OPTIMIZATION_IMPLEMENTATION_REPORT.md
bot/src/: bot.py  (+44 more)
ctrader/: DRLTrader.cs  DRLTrader.csproj
drl_model/: .gitignore  CMakeLists.txt  LICENSE  MIGRATION.md  README.md  build.ps1  config.template.env  requirements.txt
drl_model/scripts/: export_model.ps1  export_torchscript.py  run_tests.ps1  test_model.py  validate_env.ps1
drl_model/src/: dll_interface.cpp  model_wrapper.cpp  model_wrapper.h  test_dll.cpp
mql5/: debugging.txt
(+94 files in other folders)
